Fix missing margin on h1 from css * reset

--- a/views/style.css
+++ b/views/style.css
@@ -23,6 +23,7 @@ h4 {
 
 h1 {
   font-size: 48pt;
+  margin: 36px 24px;
 }
 
 h2 {
@@ -135,8 +136,6 @@ a.navtab {
 
 #content_window {
   display: flex;
-  flex-basis: 75%;
-  /* have game window take up most of horizontal space */
 }
 
 #kubercade_iframe {
